loader: initial build

--- a/website-assets/vercel.json
+++ b/website-assets/vercel.json
@@ -23,5 +23,12 @@
         }
       ]
     }
+  ],
+  "routes": [
+    {
+      "src": "/app",
+      "dest": "https://webkraft.dev", 
+      "status": 302
+    }
   ]
 }
