--- a/vercel.json
+++ b/vercel.json
@@ -23,11 +23,25 @@
       ]
     }
   ],
-  "routes": [
+  "redirects": [
     {
-      "src": "/app",
-      "dest": "https://webkraft.dev",
-      "status": 302
+      "source": "/app",
+      "destination": "https://webkraft.dev",
+      "permanent": false
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/css/(.*)",
+      "destination": "/wkd-website/public/css/$1"
+    },
+    {
+      "source": "/fonts/(.*)",
+      "destination": "/wkd-website/public/fonts/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/wkd-website/$1"
     }
   ]
 }
