--- a/loader/package.json
+++ b/loader/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "wkd-website",
+  "name": "wkd-loader",
   "version": "1.0.0",
-  "description": "WKD Website with Loader",
+  "description": "WebKraft Loader",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.0.4"
   },
   "engines": {
     "node": ">=18.0.0"
